# InnerCommunication

VideoTransfer-v-0.01/: CMakeLists.txt
VideoTransfer-v-0.01/Apps/: CMakeLists.txt
VideoTransfer-v-0.01/Apps/VideoRemotelyShowTransfer/: CMakeLists.txt  VideoRemotelyShowTransfer.cpp
VideoTransfer-v-0.01/vacClass/: CMakeLists.txt
VideoTransfer-v-0.01/vacClass/vacMainInterface/: CMakeLists.txt  vacMainInterface.cpp  vacMainInterface.h
VideoTransfer-v-0.01/vacClass/vacMessageTransfer/: CMakeLists.txt  vacMessageTransfer.cpp  vacMessageTransfer.h
VideoTransfer-v-0.01/vacClass/vacVideoTransfer/: CMakeLists.txt  vacVideoTransfer.cpp  vacVideoTransfer.h
